# arq-dishka

./: pyproject.toml
app/: _arq.py  config.py  main.py
application/: service.py
application/interface/: service.py  session.py
config/: dev.toml
infra/: loader.py
infra/arq_integration/: settings.py
infra/db/: config.py  sessions.py
infra/di/: di_providers.py
infra/redis/: config.py
presentation/: config.py  jobs.py  tasks.py
presentation/di/: di_providers.py
