[tool.poetry]
name = "integ"
version = "0.1.0"
description = ""
authors = ["Beki Imanji <imanjibeki@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dishka = "^1.2.0"
arq = "^0.26.0"
adaptix = "^3.0.0b7"
tomli = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
